--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
+    "@pythnetwork/client": "^2.21.1",
     "@types/node": "^20.14.9",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
