--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
     "@pythnetwork/client": "^2.21.1",
+    "@renec-foundation/mpl-token-metadata": "^0.1.3",
+    "@solana/spl-token": "0.2.0",
+    "@types/bn.js": "^5.1.5",
     "@types/node": "^20.14.9",
     "axios": "^1.7.2",
+    "bn.js": "^5.2.1",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "ipfs-http-client": "59.0.0",
